--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-drag-reorder": "^1.2.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
