--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-drag-reorder": "^1.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
